EclipseLink Java cache expiry support