@@ -21,18 +21,18 @@ public interface Caching extends PersistenceUnitProperties
 	CacheType getDefaultCacheTypeDefault();
 	CacheType getCacheTypeDefault();
 	void setCacheTypeDefault(CacheType cacheTypeDefault);
-			static final String CACHE_TYPE_DEFAULT_PROPERTY = "cacheTypeDefaultProperty";
-			// EclipseLink key string
-			static final String ECLIPSELINK_CACHE_TYPE_DEFAULT = "eclipselink.cache.type.default";
-			static final CacheType DEFAULT_CACHE_TYPE_DEFAULT = CacheType.soft_weak;
+		static final String CACHE_TYPE_DEFAULT_PROPERTY = "cacheTypeDefaultProperty";
+		// EclipseLink key string
+		static final String ECLIPSELINK_CACHE_TYPE_DEFAULT = "eclipselink.cache.type.default";
+		static final CacheType DEFAULT_CACHE_TYPE_DEFAULT = CacheType.soft_weak;
 
 	Integer getDefaultCacheSizeDefault();
 	Integer getCacheSizeDefault();
 	void setCacheSizeDefault(Integer cacheSizeDefault);
-			static final String CACHE_SIZE_DEFAULT_PROPERTY = "cacheSizeDefaultProperty";
-			// EclipseLink key string
-			static final String ECLIPSELINK_CACHE_SIZE_DEFAULT = "eclipselink.cache.size.default";
-			static final Integer DEFAULT_CACHE_SIZE_DEFAULT = new Integer(100);
+		static final String CACHE_SIZE_DEFAULT_PROPERTY = "cacheSizeDefaultProperty";
+		// EclipseLink key string
+		static final String ECLIPSELINK_CACHE_SIZE_DEFAULT = "eclipselink.cache.size.default";
+		static final Integer DEFAULT_CACHE_SIZE_DEFAULT = Integer.valueOf(100);
 
 	Boolean getDefaultSharedCacheDefault();
 	Boolean getSharedCacheDefault();
@@ -46,26 +46,26 @@ public interface Caching extends PersistenceUnitProperties
 	CacheType getDefaultCacheType();
 	CacheType getCacheType(String entityName);
 	void setCacheType(CacheType cacheType, String entityName);
-			static final String CACHE_TYPE_PROPERTY = "cacheTypeProperty";
-			// EclipseLink key string
-			static final String ECLIPSELINK_CACHE_TYPE = "eclipselink.cache.type.";
-			static final CacheType DEFAULT_CACHE_TYPE = CacheType.soft_weak;
+		static final String CACHE_TYPE_PROPERTY = "cacheTypeProperty";
+		// EclipseLink key string
+		static final String ECLIPSELINK_CACHE_TYPE = "eclipselink.cache.type.";
+		static final CacheType DEFAULT_CACHE_TYPE = CacheType.soft_weak;
 
 	Integer getDefaultCacheSize();
 	Integer getCacheSize(String entityName);
 	void setCacheSize(Integer cacheSize, String entityName);
-			static final String CACHE_SIZE_PROPERTY = "cacheSizeProperty";
-			// EclipseLink key string
-			static final String ECLIPSELINK_CACHE_SIZE = "eclipselink.cache.size.";
-			static final Integer DEFAULT_CACHE_SIZE = new Integer(100);
+		static final String CACHE_SIZE_PROPERTY = "cacheSizeProperty";
+		// EclipseLink key string
+		static final String ECLIPSELINK_CACHE_SIZE = "eclipselink.cache.size.";
+		static final Integer DEFAULT_CACHE_SIZE = Integer.valueOf(100);
 
 	Boolean getDefaultSharedCache();
 	Boolean getSharedCache(String entityName);
 	void setSharedCache(Boolean sharedCache, String entityName);
-			static final String SHARED_CACHE_PROPERTY = "sharedCacheProperty";
-			// EclipseLink key string
-			static final String ECLIPSELINK_SHARED_CACHE = "eclipselink.cache.shared.";
-			static final Boolean DEFAULT_SHARED_CACHE = Boolean.TRUE;
+		static final String SHARED_CACHE_PROPERTY = "sharedCacheProperty";
+		// EclipseLink key string
+		static final String ECLIPSELINK_SHARED_CACHE = "eclipselink.cache.shared.";
+		static final Boolean DEFAULT_SHARED_CACHE = Boolean.TRUE;
 
 
 	ListIterator<String> entities();
